Fix sidebar overflow

--- a/ui/src/components/App.scss
+++ b/ui/src/components/App.scss
@@ -8,6 +8,7 @@
   width: 20%;
   min-width: 150px;
   background-color: #262830;
+  overflow: auto;
 
   @media only screen and (min-width: 992px) {
     width: 300px;
